2005-12-15  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (fhandler_dev_zero::fixup_mmap_after_fork): Use
	system_printf like any other fixup_mmap_after_fork.

2005-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (ACCFLAGS): Remove macro.
	(fhandler_base::get_default_fmode): Use O_ACCMODE instead of ACCFLAGS
	and or'ed read/write flags.
	(fhandler_base::open_9x): Use O_ACCMODE instead of or'ed read/write
	flags.
	(fhandler_base::open): Ditto.
	* fhandler_disk_file.cc (fhandler_base::open_fs): Ditto.
	* fhandler_mem.cc (fhandler_dev_mem::open): Ditto.
	* fhandler_raw.cc (fhandler_dev_raw::open): Ditto.

2005-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open_9x): Handle O_SYNC and O_DIRECT
	flags.
	(fhandler_base::open): Ditto.
	* fhandler_floppy.cc (fhandler_dev_floppy::open): Don't allocate devbuf
	in O_DIRECT case.
	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Don't allow buffer
	changes in O_DIRECT case.  Allow returning a buffer size 0, which
	indicates O_DIRECT.
	* fhandler_tape.cc (fhandler_dev_tape::open): Use O_SYNC flag to
	hand down the !buffer_writes case.  Don't allocate devbuf in O_DIRECT
	case.
	(fhandler_dev_tape::raw_read): Don't mess with devbuf if it's NULL.
	* include/fcntl.h: Define _FDIRECT, O_DIRECT, O_DSYNC and O_RSYNC.
	* include/cygwin/version.h: Bump API minor version.

2005-12-13  Christopher Faylor  <cgf@timesys.com>

	* cygtls.cc (_cygtls::remove): Don't bother if we're exiting.
	* sigproc.cc (_cygtls::remove_wq): Ditto.

2005-12-13  Christopher Faylor  <cgf@timesys.com>

	* fhandler_tty.cc (fhandler_tty::open): Enhance comment.

2005-12-13  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty::open): Close newly created window
	station after switching to original window station.

2005-12-13  Christopher Faylor  <cgf@timesys.com>

	* fhandler_tty.cc (fhandler_tty::open): Add a comment.

2005-12-12  Christopher Faylor  <cgf@timesys.com>
